--- a/contactus.html
+++ b/contactus.html
@@ -16,7 +16,7 @@
             <nav class="nav">
                 <i class="discord fa-brands fa-discord fa-10x" style="color: #ffffff;"></i>
                 <ul class="nav-holder">
-                    <li> <a class="nav-item" href="../index.html"> Home </a> </li>
+                    <li> <a class="nav-item" href="./index.html"> Home </a> </li>
                     <li> <a class="nav-item" href="./about.html"> About </a> </li>
                     <li> <a class="nav-item" href="contactus.html"> Contact us </a> </li>
                 </ul>
