--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="row1 row">
                     <img class="img-item img-item1" src="./luffykidlawzoro.jpg" alt="">
                     <div class="text-item text-item1">
-                        <h1 class="headings"> Wrost Generation </h1>
+                        <h1 class="headings"> Worst Generation </h1>
                    
                         <p> The Worst Generation is a term referring to twelve infamous pirates who emerged immediately before the beginning of the War at Marineford. They are one of the biggest powers on the sea, and have certainly lived up to their name. Currently, two of the Yonko come from the Worst Generation, which in itself shows that they are not to be taken lightly. </p>
                         <a class="button2" href=""> More </a>
@@ -88,7 +88,7 @@ Imu is the real supreme leader of the World Government occupying the Empty Thron
                 <div class="row5 row">
                     <img class="img-item img-item5" src="./goldroger.jpg" alt="">
                     <div class="text-item text-item5">
-                        <h1 class="headings"> Gold D. Roger </h1>
+                        <h1 class="headings"> Gol D. Roger </h1>
                         <p> 
 Gol D. Roger, more commonly known as Gold Roger, was a legendary pirate who, as captain of the Roger Pirates, held the title of Pirate King and owned the legendary treasure known as One Piece. Roger was famed as the man who did what no one thought possible — he conquered the Grand Line and amassed a vast fortune. </p> 
 <a class="button2" href=""> More </a>
